[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 50.0
margin_right = -40.0
margin_bottom = -40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopLabels" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 102.0

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopLabels"]
margin_right = 1000.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopLabels/VBoxContainer"]
margin_right = 498.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="LocationPermissionsLabel" type="Label" parent="VBoxContainer/TopLabels/VBoxContainer/HBoxContainer"]
margin_right = 290.0
margin_bottom = 49.0
text = "Loc. permissions: "

[node name="LocationPermissionsLabel2" type="Label" parent="VBoxContainer/TopLabels/VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 342.0
margin_bottom = 49.0
text = "On"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TopLabels/VBoxContainer"]
margin_left = 502.0
margin_right = 1000.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="LocationStatusLabel" type="Label" parent="VBoxContainer/TopLabels/VBoxContainer/HBoxContainer3"]
margin_right = 181.0
margin_bottom = 49.0
text = "Loc. status:"

[node name="LocationStatusLabel2" type="Label" parent="VBoxContainer/TopLabels/VBoxContainer/HBoxContainer3"]
margin_left = 185.0
margin_right = 233.0
margin_bottom = 49.0
text = "On"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TopLabels"]
margin_top = 53.0
margin_right = 1000.0
margin_bottom = 102.0

[node name="BluetoohStatusLabel" type="Label" parent="VBoxContainer/TopLabels/HBoxContainer2"]
margin_right = 285.0
margin_bottom = 49.0
text = "Bluetooth status: "

[node name="BluetoohStatusLabel2" type="Label" parent="VBoxContainer/TopLabels/HBoxContainer2"]
margin_left = 289.0
margin_right = 337.0
margin_bottom = 49.0
text = "On"

[node name="Devices" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 1000.0
margin_bottom = 1085.0
size_flags_vertical = 3

[node name="FoundDevicesLabel" type="Label" parent="VBoxContainer/Devices"]
margin_right = 1000.0
margin_bottom = 49.0
text = "Found devices:"

[node name="FoundDevicesList" type="ItemList" parent="VBoxContainer/Devices"]
margin_top = 53.0
margin_right = 1000.0
margin_bottom = 979.0
size_flags_vertical = 3

[node name="Log" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 1089.0
margin_right = 1000.0
margin_bottom = 2068.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="VBoxContainer/Log"]
margin_right = 1000.0
margin_bottom = 49.0
text = "Log:"

[node name="Log" type="RichTextLabel" parent="VBoxContainer/Log"]
margin_top = 53.0
margin_right = 1000.0
margin_bottom = 979.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true
selection_enabled = true

[node name="TextAndButtons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 2072.0
margin_right = 1000.0
margin_bottom = 2190.0
size_flags_horizontal = 3

[node name="SendTextLine" type="LineEdit" parent="VBoxContainer/TextAndButtons"]
margin_right = 1000.0
margin_bottom = 59.0
size_flags_horizontal = 3
placeholder_text = "Send text"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/TextAndButtons"]
margin_top = 63.0
margin_right = 1000.0
margin_bottom = 118.0
size_flags_horizontal = 3

[node name="ScanButton" type="Button" parent="VBoxContainer/TextAndButtons/Buttons"]
margin_right = 247.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Scan"

[node name="ConnectButton" type="Button" parent="VBoxContainer/TextAndButtons/Buttons"]
margin_left = 251.0
margin_right = 498.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Connect"

[node name="DisconnectButton" type="Button" parent="VBoxContainer/TextAndButtons/Buttons"]
margin_left = 502.0
margin_right = 749.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Disconnect"

[node name="SendTextButton" type="Button" parent="VBoxContainer/TextAndButtons/Buttons"]
margin_left = 753.0
margin_right = 1000.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Send"

[connection signal="item_selected" from="VBoxContainer/Devices/FoundDevicesList" to="." method="_on_FoundDevicesList_item_selected"]
[connection signal="button_up" from="VBoxContainer/TextAndButtons/Buttons/ScanButton" to="." method="_on_scanButton_button_up"]
[connection signal="button_up" from="VBoxContainer/TextAndButtons/Buttons/ConnectButton" to="." method="_on_ConnectButton_button_up"]
[connection signal="button_up" from="VBoxContainer/TextAndButtons/Buttons/DisconnectButton" to="." method="_on_DisconnectButton_button_up"]
